force-app/main/default/objects/MC4SF__MC_Interest_Grouping__c/MC4SF__MC_Interest_Grouping__c.object-meta.xml
<CustomObject>
    <label>MC Interest Grouping</label>
    <nameField>
        <label>Interest Grouping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MC Interest Groupings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>