force-app/main/default/objects/MC4SF__MC_Interest_Grouping__c/fields/MC4SF__Form_Field__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Form_Field__c</fullName>
    <label>Form Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>