force-app/main/default/objects/MC4SF__MC_Interest_Grouping__c/fields/MC4SF__MailChimpID__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__MailChimpID__c</fullName>
    <externalId>true</externalId>
    <label>MailChimp ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>